--- a/azsh-linux-agent/Dockerfile.linux-sh-agent-docker
+++ b/azsh-linux-agent/Dockerfile.linux-sh-agent-docker
@@ -21,6 +21,10 @@ RUN apt update -y && apt upgrade -y && apt install curl git jq libicu74 -y
 # Also can be "linux-arm", "linux-arm64".
 ENV TARGETARCH="linux-x64"
 
+COPY ./install-linux-agent-tools.sh /tmp/install-linux-agent-tools.sh
+RUN bash /tmp/install-linux-agent-tools.sh
+RUN rm /tmp/install-linux-agent-tools.sh
+
 WORKDIR /azp/
 
 COPY ./start.sh ./
