--- a/azsh-linux-agent/Dockerfile.linux-sh-agent-ubuntu22
+++ b/azsh-linux-agent/Dockerfile.linux-sh-agent-ubuntu22
@@ -6,8 +6,9 @@ RUN apt update && \
     apt upgrade -y && \
     apt install -y curl git jq libicu70
 
-# Install Azure CLI
-RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
+COPY ./install-linux-agent-tools.sh /tmp/install-linux-agent-tools.sh
+RUN bash /tmp/install-linux-agent-tools.sh
+RUN rm /tmp/install-linux-agent-tools.sh
 
 WORKDIR /azp/
 
