--- a/azsh-windows-agent/Dockerfile.windows-sh-agent-2022-windows2022.prebaked
+++ b/azsh-windows-agent/Dockerfile.windows-sh-agent-2022-windows2022.prebaked
@@ -10,6 +10,11 @@ ARG AGENT_VERSION=4.261.0
 # Install PowerShell requirements and set up environment
 WORKDIR /azp/
 
+COPY ./Install-WindowsAgentTools.ps1 C:/temp/Install-WindowsAgentTools.ps1
+RUN powershell -NoLogo -NoProfile -ExecutionPolicy Bypass -File C:\temp\Install-WindowsAgentTools.ps1
+RUN del C:\temp\Install-WindowsAgentTools.ps1
+ENV PATH="C:\\Program Files\\dotnet;C:\\Program Files\\PowerShell\\7;C:\\Program Files (x86)\\Microsoft SDKs\\Azure\\CLI2\\wbin;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\"
+
 # Pre-download the Azure Pipelines agent during build
 # The version is passed as a build argument and downloaded from Microsoft's CDN
 RUN powershell -Command " \
